make result cells scrollable if there's overflow, and also fix the color of the linking success message

--- a/src/containers/entitysetsearch/styles.module.css
+++ b/src/containers/entitysetsearch/styles.module.css
@@ -103,3 +103,8 @@
   background: #f3f5f7;
   cursor: pointer;
 }
+
+.textCell {
+  height: 40px;
+  overflow: auto;
+}
